--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://klong75.github.io/klong-web-developer-portfolio",
   "name": "klong-web-developer-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -14,6 +15,7 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "gh-pages": "^4.0.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
