--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "KLong Portfolio",
+  "short_name": "Kevin Long Portfolio",
   "name": "Kevin Long | Full Stack Web Developer | Portfolio",
   "icons": [
     {
