--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Kevin Long Portfolio",
-  "name": "Kevin Long | Full Stack Web Developer | Portfolio",
+  "name": "Kevin Long | Web Development Portfolio",
   "icons": [
     {
       "src": "web-dev-favicon.ico",
