--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-pdf": "^5.7.2",
+    "react-toastify": "^9.1.2",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
