change homepage in pckg json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kevinlong.dev",
+  "homepage": "https://KLong75.github.io/klong-web-developer-portfolio",
   "name": "klong-web-developer-portfolio",
   "version": "0.1.0",
   "private": true,
